# MARS_DVR_Rumore

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT_FOR_CODING_AGENT.md  CORE_PROTOCOL.md  DEVOPS_DEPLOYMENT_ANALYSIS.md  Dockerfile  Makefile  PAF_EXPORT_STRATEGY.md  PLANNING.md  Project-MARS_Dvr_Rumore.txt  README.md  SESSION_RESUME.md  STRUCTURED_PLAN_PHASE1.md  STRUCTURED_PLAN_PHASE2.md  STRUCTURED_PLAN_PHASE3.md  TESTING_STRATEGY.md  alembic.ini  docker-compose.yml  pyproject.toml  run_paf_noise.ps1
.claude/: settings.local.json
.claude/agents/: mars-backend-dev.md
.firecrawl/: ateco-download-search.json  ateco-download.json  ateco-istat-main.json  ateco-istat.json  ateco-schemagov.json  dati-gov-ateco.json  datigov-ateco-csv.json  datigov-ateco-search.json  fsc-torino-db.json  fsc-torino.json  inail-ateco.json  paf-banche-dati.json  paf-condizioni.json  paf-license.json  paf-rumore.json  paf-sitemap.json  schema-ateco-lod.json  schema-ateco-vocab.json  schemagov-ateco.json
.github/workflows/: ci.yml
.opencode/: opencode.json
banca dati rumore/: banca_dati_rumore_completa.csv
data/ateco/: ateco2007_sample.json
data/knowledge_base/: kb_sample.json  paf_full_2026-04-08.json
docker/: .env.docker  docker-entrypoint.sh
docker/backup/: backup_all.sh  pg_dump.sh  pg_restore.sh  redis_dump.sh  redis_restore.sh
docker/nginx/: nginx.conf
docs/operations/: runbook.md  secrets-rotation.md
mars_noise_module_full_agent_pack/mars_noise_module_pack/: AI_PROMPTING_DESIGN.md  API_SPEC.md  COMPLIANCE_CHECKLIST.md  CONTEXT.md  DATA_MODEL.md  DATA_SOURCES_RESEARCH.md  GOVERNANCE_AND_COMPLIANCE.md  IMPLEMENTATION_ROADMAP.md  NOISE_CALCULATION_SPEC.md  NORMATIVE_ANALYSIS_REPORT.md  NORMATIVE_REQUIREMENTS_MAPPING.md  PRD.md  README.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_seed_ateco.py  003_seed_noise_sources.py  004_seed_paf_full.py  005_add_ai_tables.py  006_add_docx_models.py  007_add_auth_tenant.py  008_add_audit_log.py  009_backfill_tenant_id.py  010_add_company_is_deleted_and_fk.py  011_performance_indexes.py  012_add_noise_assessment_context.py  013_add_ai_suggestion_context_id.py
scripts/: convert_ateco.py
src/bootstrap/: __init__.py  config.py  database.py  main.py
src/cli/: create_admin.py  index_paf_library.py
src/paf_noise_cli/: __init__.py  __main__.py  cli.py
static/: index.html
static/css/: audit-trail.css  autopilot.css  design-tokens.css  editor.css  main.css  suggestions.css  template-config.css
tests/: conftest.py  test_cli.py
(+203 files in other folders)
