[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paf-noise-cli"
version = "0.1.0"
description = "CLI per esportare la banca dati rumore del Portale Agenti Fisici"
requires-python = ">=3.11"

[project.scripts]
paf-noise = "paf_noise_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
